welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: value FaceMur
while (FaceMur== false) avance;  
       ^