welcome.lessons.welcome.variables.Variables.scala.code
while (estSurBiscuit == false) avance;
porteBiscuit;
gauche;
gauche;
gauche;
while (FaceMur== false) avance; 